--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,25 +1,22 @@
 <ion-app>
-  <ion-header [translucent]="true">
-    <ion-toolbar>
-      <ion-title>Header</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <ion-router-outlet></ion-router-outlet>
   <ion-tabs>
+    <ion-header [translucent]="true">
+      <ion-toolbar>
+        <ion-title>{{titleService.title }}</ion-title>
+      </ion-toolbar>
+    </ion-header>
     <ion-tab-bar slot="bottom">
-      <ion-tab-button>
+      <ion-tab-button tab="home">
         <ion-icon aria-hidden="true" name="home"></ion-icon>
         <ion-label>Home</ion-label>
       </ion-tab-button>
-  
       <ion-tab-button (click)="openModal()">
         <ion-icon aria-hidden="true" name="add"></ion-icon>
         <ion-label>Post</ion-label>
       </ion-tab-button>
-  
-      <ion-tab-button>
-        <ion-icon aria-hidden="true" name="chatbubble"></ion-icon>
-        <ion-label>Chat</ion-label>
+      <ion-tab-button tab="profile">
+        <ion-icon aria-hidden="true" name="person"></ion-icon>
+        <ion-label>Profile</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
