--- a/frontend/src/app/components/create-post/create-post.component.html
+++ b/frontend/src/app/components/create-post/create-post.component.html
@@ -12,7 +12,7 @@
 @if (isPageReady()) {
   <ion-content class="ion-padding">
     <form [formGroup]="form">
-      <ion-input class="input-title" type="text" formControlName="title" label-placement="stacked" label="Title" placeholder="Your title"></ion-input>
+      <ion-input type="text" formControlName="title" label-placement="stacked" label="Title" placeholder="Your title"></ion-input>
       <ion-select formControlName="categories" aria-label="Categories" label-placement="stacked" placeholder="Select categories" [multiple]="true">
         @for (category of categories; track category) {
           <ion-select-option [value]="category.name">{{ category.label }}</ion-select-option>
