--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,28 +1,19 @@
-<ion-content>
-  @for(post of posts; track post.id) {
-    <ion-card [color]="post.color">
-      <ion-card-header>
-        <div>
-          <ion-card-subtitle>Created by {{ post.user.name }}</ion-card-subtitle>
-          <ion-card-title>{{post.title}}</ion-card-title>
-        </div>
-        <div class="div-card-avatar">
-          <ion-avatar>
-            <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
-          </ion-avatar>
-        </div>
-      </ion-card-header>
-      <ion-card-content>
-        {{ post.preview }}
-
-        <div class="div-categories">
-          @for(category of post.categories; track category) {
-            <ion-chip [color]="post.color" >{{ category.label }}</ion-chip>
-          }
-        </div>
-      </ion-card-content>
-    </ion-card>
+<ion-tab-bar [selectedTab]="currentTab" slot="top" [ngStyle]="{ transform: tabBarTransform }" class="ion-tab-bar-top">
+  <ion-tab-button (click)="navigateToTab('feed')">
+    <ion-label>Feed</ion-label>
+  </ion-tab-button>
+  <ion-tab-button (click)="navigateToTab('ask-me')">
+    <ion-label>Ask Me</ion-label>
+  </ion-tab-button>
+</ion-tab-bar>
+<ion-content (ionScroll)="onScroll($event)" [scrollEvents]="true" [fullscreen]="true">
+  @if(currentTab == 'ask-me') {
+    <app-ask-me></app-ask-me>
   }
+  @else {
+    <app-feed></app-feed>
+  }
+ 
   <!-- <ion-infinite-scroll (ionInfinite)="onIonInfinite($event)">
     <ion-infinite-scroll-content></ion-infinite-scroll-content>
   </ion-infinite-scroll> -->
