--- a/frontend/src/app/components/home/home.component.scss
+++ b/frontend/src/app/components/home/home.component.scss
@@ -1,48 +1,8 @@
-@use '../../../theme/colors';
 
-ion-card {
-    margin: 0;
-    z-index: 1;
-    border-radius: 0;
 
-    ion-avatar {
-        right: 25px;
-        z-index: 2;
-        top: 0;
-        transform: scale(.8);
-    }
-
-    ion-chip {
-        background-color: rgba(0, 0, 0, 0.5);
-        color: white;
-        margin: 0;
-    }
-}
-
-ion-card-header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.div-card-avatar {
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-}
-
-ion-card-content {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
-.div-categories {
-    display: flex;
-    gap: 10px;
-    // justify-content: center;
-}
-
-ion-card-title {
-    font-size: 1.25rem;
+.ion-tab-bar-top{
+    transition: transform 0.2s ease-in-out;
+    position: sticky;
+    top: 0;
+    z-index: 10;
 }
