--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,21 +1,29 @@
 <ion-app>
   <ion-tabs>
-    <ion-header >
+    <ion-header>
       <ion-toolbar>
-        <ion-title>{{titleService.title }}</ion-title>
+        <ion-title>{{ titleService.title }}</ion-title>
       </ion-toolbar>
     </ion-header>
     <ion-tab-bar slot="bottom">
-      <ion-tab-button tab="home">
-        <ion-icon aria-hidden="true" name="home"></ion-icon>
-        <ion-label>Home</ion-label>
+      <ion-tab-button tab="feed">
+        <ion-icon aria-hidden="true" name="home-outline"></ion-icon>
+        <ion-label>Feed</ion-label>
+      </ion-tab-button>
+      <ion-tab-button tab="ask-me">
+        <ion-icon aria-hidden="true" name="help"></ion-icon>
+        <ion-label>Ask Me</ion-label>
       </ion-tab-button>
       <ion-tab-button (click)="createPost()">
         <ion-icon aria-hidden="true" name="add"></ion-icon>
         <ion-label>Post</ion-label>
       </ion-tab-button>
+      <ion-tab-button tab="chat">
+        <ion-icon aria-hidden="true" name="chatbubbles-outline"></ion-icon>
+        <ion-label>Chat</ion-label>
+      </ion-tab-button>
       <ion-tab-button tab="profile">
-        <ion-icon aria-hidden="true" name="person"></ion-icon>
+        <ion-icon aria-hidden="true" name="person-outline"></ion-icon>
         <ion-label>Profile</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
