--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -1,8 +1,1 @@
-<ion-content>
-  <p>profile</p>
-  <p>profile</p>
-  <p>profile</p>
-  <p>profile</p>
-  <p>profile</p>
-
-</ion-content>
+<p>profile works!</p>
