--- a/frontend/src/app/components/ask-me/ask-me.component.html
+++ b/frontend/src/app/components/ask-me/ask-me.component.html
@@ -1,14 +1,16 @@
-@for(post of posts; track post.id) {
-  <ion-card [color]="post.user.color">
-    <div class="div-card-avatar ion-padding">
-      <ion-avatar>
-        <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
-      </ion-avatar>
-    </div>
-    <div class="div-card-content">
+<ion-content>
+  @for(post of posts; track post.id) {
+    <ion-card [color]="post.user.color">
       <ion-card-header>
-        <ion-card-title>{{ post.user.job }}</ion-card-title>
-        <ion-card-subtitle>Located in {{ post.user.location }}</ion-card-subtitle>
+        <div>
+          <ion-card-subtitle>{{ post.user.name }}, {{ post.user.location }}</ion-card-subtitle>
+          <ion-card-title>{{ post.user.job }}</ion-card-title>
+        </div>
+        <div class="div-card-avatar">
+          <ion-avatar>
+            <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+          </ion-avatar>
+        </div>
       </ion-card-header>
       <ion-card-content>
         {{ post.user.description }}
@@ -25,6 +27,34 @@
           }
         </div>
       </ion-card-content>
-    </div>
-  </ion-card>
-}
+
+    </ion-card>
+  }
+</ion-content>
+
+<!-- <ion-content>
+  @for(post of posts; track post.id) {
+    <ion-card [color]="post.color" (click)="navigateToPost(post.id)">
+      <ion-card-header>
+        <div>
+          <ion-card-subtitle>Created by {{ post.user.name }}</ion-card-subtitle>
+          <ion-card-title>{{post.title}}</ion-card-title>
+        </div>
+        <div class="div-card-avatar">
+          <ion-avatar>
+            <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+          </ion-avatar>
+        </div>
+      </ion-card-header>
+      <ion-card-content>
+        {{ post.preview }}
+  
+        <div class="div-categories">
+          @for(category of post.categories; track category) {
+            <ion-chip [color]="post.color" >{{ category.label }}</ion-chip>
+          }
+        </div>
+      </ion-card-content>
+    </ion-card>
+  }
+</ion-content> -->
