--- a/frontend/src/app/components/ask-me/ask-me.component.scss
+++ b/frontend/src/app/components/ask-me/ask-me.component.scss
@@ -1,7 +1,32 @@
 ion-card {
-    display: flex;
     margin: 0;
     border-radius: 0;
+
+    ion-avatar {
+        right: 25px;
+        z-index: 2;
+        top: 0;
+        transform: scale(.8);
+    }
+
+    ion-chip {
+        background-color: rgba(0, 0, 0, 0.5);
+        color: white;
+        margin: 0;
+    }
+}
+
+ion-card-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+ion-card-content {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    overflow: auto;
 }
 
 ion-card-title {
@@ -10,13 +35,8 @@ ion-card-title {
 
 .div-card-avatar {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
-    padding-right: 0;
-}
-
-.div-achievements {
-    padding-top: 16px;
 }
 
 .span-achievement-tooltip {
