--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -6,12 +6,12 @@
       </ion-toolbar>
     </ion-header>
     <ion-tab-bar slot="bottom">
-      <ion-tab-button tab="feed">
-        <ion-icon aria-hidden="true" name="home-outline"></ion-icon>
-        <ion-label>Feed</ion-label>
+      <ion-tab-button tab="community">
+        <ion-icon aria-hidden="true" name="people-outline"></ion-icon>
+        <ion-label>Community</ion-label>
       </ion-tab-button>
       <ion-tab-button tab="ask-me">
-        <ion-icon aria-hidden="true" name="help"></ion-icon>
+        <ion-icon aria-hidden="true" name="hand-left-outline"></ion-icon>
         <ion-label>Ask Me</ion-label>
       </ion-tab-button>
       <ion-tab-button (click)="createPost()">
