--- a/frontend/src/app/components/view-post/view-post.component.html
+++ b/frontend/src/app/components/view-post/view-post.component.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button default-href="feed" (click)="close()"></ion-back-button>
+      <ion-back-button default-href="community" (click)="close()"></ion-back-button>
     </ion-buttons>
     <ion-title>{{ title }}</ion-title>
   </ion-toolbar>
