--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -6,25 +6,25 @@
       </ion-toolbar>
     </ion-header>
     <ion-tab-bar slot="bottom">
-      <ion-tab-button tab="community">
-        <ion-icon aria-hidden="true" name="people-outline"></ion-icon>
-        <ion-label>Community</ion-label>
-      </ion-tab-button>
-      <ion-tab-button tab="ask-me">
-        <ion-icon aria-hidden="true" name="hand-left-outline"></ion-icon>
-        <ion-label>Ask Me</ion-label>
-      </ion-tab-button>
-      <ion-tab-button (click)="createPost()">
-        <ion-icon aria-hidden="true" name="add"></ion-icon>
-        <ion-label>Post</ion-label>
+      <ion-tab-button tab="home">
+        <ion-icon aria-hidden="true" name="home-outline"></ion-icon>
+        <ion-label>Home</ion-label>
       </ion-tab-button>
       <ion-tab-button tab="chat">
         <ion-icon aria-hidden="true" name="chatbubbles-outline"></ion-icon>
         <ion-label>Chat</ion-label>
       </ion-tab-button>
+      <ion-tab-button (click)="createPost()">
+        <ion-icon aria-hidden="true" name="add"></ion-icon>
+        <ion-label>Post</ion-label>
+      </ion-tab-button>
       <ion-tab-button tab="profile">
         <ion-icon aria-hidden="true" name="person-outline"></ion-icon>
         <ion-label>Profile</ion-label>
+      </ion-tab-button>
+      <ion-tab-button tab="notifications">
+        <ion-icon aria-hidden="true" name="notifications-outline"></ion-icon>
+        <ion-label>Notifications</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
