--- a/frontend/src/app/components/home/home.component.scss
+++ b/frontend/src/app/components/home/home.component.scss
@@ -31,13 +31,17 @@ ion-card-header {
 ion-card-content {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 16px;
     overflow: auto;
 }
 
-.div-categories {
+ion-buttons {
     display: flex;
-    gap: 10px;
+    gap: 8px;
+
+    ion-button {
+        --border-width: 0;
+    }
 }
 
 ion-card-title {
