--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -1,1 +1,36 @@
-<p>profile works!</p>
+<ion-content class="ion-padding">
+    <div class="div-avatar ion-padding">
+        <ion-avatar>
+            <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+        </ion-avatar>
+        <div>
+            <ion-card-title>{{ user.name }}</ion-card-title>
+            <ion-card-subtitle>{{ user.job }}</ion-card-subtitle>
+        </div>
+    </div>
+    <ion-accordion-group [multiple]="true" [value]="['description', 'achievements']">
+        <ion-accordion value="achievements">
+            <ion-item slot="header" color="light">
+                <ion-label>Achievements</ion-label>
+            </ion-item>
+            <div class="ion-padding" slot="content">
+                @for(achievement of user.achievements; track achievement.id) {
+                <ion-button size="small" color="dark" [id]="'u' + user.id + 'a' + achievement.id">
+                    <ion-icon slot="icon-only" [name]="achievement.icon"></ion-icon>
+                </ion-button>
+                <ion-popover [trigger]="'u' + user.id + 'a' + achievement.id" triggerAction="click">
+                    <ng-template>
+                        <span class="ion-padding span-achievement-tooltip">{{ achievement.name }}</span>
+                    </ng-template>
+                </ion-popover>
+                }
+            </div>
+        </ion-accordion>
+        <ion-accordion value="description">
+            <ion-item slot="header" color="light">
+                <ion-label>Description</ion-label>
+            </ion-item>
+            <div class="ion-padding" slot="content">{{ user.description }}</div>
+        </ion-accordion>
+    </ion-accordion-group>
+</ion-content>
