--- a/frontend/src/app/components/view-post/view-post.component.scss
+++ b/frontend/src/app/components/view-post/view-post.component.scss
@@ -23,23 +23,27 @@ ion-card-header {
     justify-content: space-between;
 }
 
-.div-card-avatar {
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-}
-
 ion-card-content {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 16px;
 }
 
-.div-categories {
+ion-buttons {
     display: flex;
-    gap: 10px;
+    gap: 8px;
+
+    ion-button {
+        --border-width: 0;
+    }
 }
 
 ion-card-title {
     font-size: 1.25rem;
+}
+
+.div-card-avatar {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
 }
