--- a/frontend/src/app/components/view-post/view-post.component.html
+++ b/frontend/src/app/components/view-post/view-post.component.html
@@ -6,23 +6,23 @@
     <ion-title>{{ title }}</ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-card [color]="post.color">
+<ion-card [color]="post.category.color">
   <ion-card-header>
     <div>
-      <ion-card-subtitle>Created by {{ post.user.name }}</ion-card-subtitle>
-      <ion-card-title>{{post.title}}</ion-card-title>
+      <ion-card-subtitle>Created by {{ post.anonymous ? 'Anonymous' : post.user.name }}</ion-card-subtitle>
+      <ion-card-title>{{ post.title }}</ion-card-title>
     </div>
     <div class="div-card-avatar">
       <ion-avatar>
-        <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+        <img alt="Avatar" [src]="post.anonymous ? 'assets/avatar/anonymous.webp' : 'assets/avatar/identified.webp'" />
       </ion-avatar>
     </div>
   </ion-card-header>
   <ion-card-content>
     {{ post.content }}
-    <ion-buttons slot="secondary">
-      <ion-button fill="outline">
-        <ion-icon slot="start" name="heart-outline"></ion-icon>
+    <ion-buttons slot="start">
+      <ion-button fill="outline" (click)="likePost(post)">
+        <ion-icon slot="start" [name]="post.liked ? 'heart' : 'heart-outline'"></ion-icon>
         {{ post.actions.likes }}
       </ion-button>
       <ion-button fill="outline">
@@ -31,9 +31,27 @@
       </ion-button>
     </ion-buttons>
   </ion-card-content>
+  <div class="divider"></div>
+  <section class="section-comments">
+    @for(comment of post.comments; track comment.id) {
+      <div class="comment-item">
+        <ion-chip outline="true">
+          <ion-avatar>
+            <img alt="Avatar" [src]="comment.anonymous ? 'assets/avatar/anonymous.webp' : 'assets/avatar/identified.webp'" />
+          </ion-avatar>
+          <ion-label>{{ comment.anonymous ? 'Anonymous' : comment.user.name }}</ion-label>
+        </ion-chip>
+        {{ comment.content }}
+        <ion-buttons slot="secondary">
+          <ion-button fill="outline" (click)="likeComment(comment)">
+            <ion-icon slot="start" [name]="comment.liked ? 'heart' : 'heart-outline'"></ion-icon>
+            {{ comment.likes }}
+          </ion-button>
+        </ion-buttons>
+      </div>
+    }
+  </section>
 </ion-card>
 <ion-footer>
-  <ion-toolbar>
-    <ion-input class="ion-padding" type="text" formControlName="title" placeholder="Your comment"></ion-input>
-  </ion-toolbar>
+  <ion-button expand="full" fill="clear" (click)="comment()">Add a comment</ion-button>
 </ion-footer>
