--- a/frontend/src/app/components/notifications/notifications.component.html
+++ b/frontend/src/app/components/notifications/notifications.component.html
@@ -1,8 +1,8 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Chat</ion-title>
+    <ion-title>Notifications</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding">
-  chat is working
+  notifications is working
 </ion-content>
