--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -1,3 +1,8 @@
+<ion-header>
+    <ion-toolbar>
+      <ion-title>Profile</ion-title>
+    </ion-toolbar>
+</ion-header>
 <ion-content class="ion-padding">
     <div class="div-avatar ion-padding">
         <ion-avatar>
